Fix sidebar width on mobile

--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -187,7 +187,7 @@ html {
 
 /* Mobile */
 @media only screen and (max-width: 800px) {
-  #root {
+  .App {
     --sidebar-width: 100%;
   }
 }
